# nix-core

./: .gitignore  LICENSE  Project.hs  cabal.project  fourmolu.yaml  hie.yaml  nix-core.cabal  package.yaml  stack.yaml
hsnix-core/: hsnix-core.cabal  package.yaml
hsnix-core/backend-types/HsNix/: DrvStr.hsig  StorePath.hsig
hsnix-core/backend-types/HsNix/Derivation/: Types.hs
hsnix-core/backend-types/HsNix/DrvStr/: Builder.hsig
hsnix-core/backend-types/HsNix/Internal/: OutputName.hs  StorePathName.hs  System.hs
hsnix-core/core-types/HsNix/: OutputName.hs  StorePathName.hs
hsnix-core/core-types/HsNix/Internal/: OutputName.hs
hsnix-core/derivation-types/HsNix/Derivation/: DerivationArgs.hs  FetchUrlArg.hs
hsnix-core/src/HsNix/: Derivation.hs  Hash.hs  System.hs
hsnix-core/src/HsNix/Builtin/: AddFile.hs  FetchUrl.hs
hsnix-core/src/HsNix/Dependent/: Topo.hs  Vertex.hs
hsnix-core/src/HsNix/Derivation/: Backend.hsig
hsnix-core/src/HsNix/Internal/: Derivation.hs  System.hs
hsnix-drv/: hsnix-drv.cabal  package.yaml
hsnix-drv/src/HsNix/: DrvStr.hs  StorePath.hs
hsnix-drv/src/HsNix/Derivation/: Backend.hs  Drv.hs
hsnix-drv/src/HsNix/Derivation/Drv/: Instantiate.hs
hsnix-drv/src/HsNix/Derivation/Drv/Internal/: Derivation.hs  Hash.hs  Nar.hs
hsnix-drv/src/HsNix/DrvDirect/: Instantiate.hs
hsnix-drv/src/HsNix/DrvDirect/Internal/: Hash.hs  Types.hs
hsnix-drv/src/HsNix/DrvStr/: Builder.hs
hsnix-drv/storepath/HsNix/: DrvStr.hs  StorePath.hs
hsnix-drv/tests/spec/: SrcInputSpec.hs
hsnix-drv/tests/spec/Derivation/: ContentAddressedSpec.hs  DependSpec.hs  FixedOutputSpec.hs  InputAddressedSpec.hs  MultiOutput.hs  Test.hs
hsnix-drv/tests/spec/files/: dep-ca-ca.drv  dep-ca-ca.json  dep-ca-ia.drv  dep-ca-ia.json  dep-deferred-ia-ia.drv  dep-deferred-ia-ia.json  dep-fod-ca.drv  dep-fod-ca.json  dep-fod-fod.drv  dep-fod-fod.json  dep-fod-ia.drv  dep-fod-ia.json  dep-ia-ca.drv  dep-ia-ca.json  dep-ia-ia.drv  dep-ia-ia.json  dep-regular-ia-ca.drv  dep-regular-ia-ca.json  dep-src-ca.drv  dep-src-ca.json  dep-src-fod.drv  dep-src-fod.json  dep-src-ia.drv  dep-src-ia.json  multi-out-ca.drv  multi-out-ca.json  multi-out-ia.drv  multi-out-ia.json  simple-ca-rec.drv  simple-ca-rec.json  simple-ca.drv  simple-ca.json  simple-fod-rec.drv  simple-fod-rec.json  simple-fod1.drv  simple-fod1.json  simple-ia.drv  simple-ia.json
hsnix-drv/tests/spec/nix/: ca.nix  default.nix  dep.nix  fod.nix  ia.nix  mkTestDrv.nix  multiOut.nix  src.nix
hsnix-nixdrv/: hsnix-nixdrv.cabal  package.yaml
hsnix-nixdrv/src/HsNix/Derivation/: NixDrv.hs
nix-archive/: nix-archive.cabal  package.yaml
nix-archive/src/Nix/: Nar.hs
nix-archive/tests/spec/: Main.hs
nix-archive/tests/spec/files/: executable_file.nar  regular_file.nar  simple_dir.nar  sym_link.nar
project-config/: cabal.project  project-config.cabal
project-config/app/: Main.hs  Utils.hs
project-config/app/Lib/: HsNixCore.hs  HsNixDrv.hs  NixArchive.hs
src/: Lib.hs
src/Nix/: Derivation.hs  Hash.hs  System.hs
src/Nix/Builtin/: AddFile.hs  FetchUrl.hs
src/Nix/Derivation/: NixDrv.hs
src/Nix/Internal/: Derivation.hs  System.hs
