cabal-version: 3.4
name:          hsnix-core
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
build-type:    Simple

library
    exposed-modules:
        HsNix.Derivation
        HsNix.Internal.Derivation

    signatures:
        HsNix.Derivation.Backend
        HsNix.DrvStr
        HsNix.DrvStr.Builder
        HsNix.StorePath

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings Strict
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        bytestring ^>=0.11,
        hashable ^>=1.4.2,
        unordered-containers ^>=0.2,
        vector ^>=0.13,
        mtl ^>=2.2,
        nix-archive,
        hsnix-core:backend-types

library backend-types
    exposed-modules:
        HsNix.Derivation.Types
        HsNix.Hash
        HsNix.Internal.OutputName
        HsNix.Internal.StorePathName
        HsNix.Internal.System
        HsNix.System

    visibility:         public
    hs-source-dirs:     backend-types
    default-language:   Haskell2010
    default-extensions: OverloadedStrings Strict
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        bytestring ^>=0.11,
        hashable ^>=1.4.2,
        memory >=0.16 && <0.19,
        cryptonite >=0.29 && <0.31,
        template-haskell >=2.17 && <2.20
