cabal-version: 3.4
name:          hsnix-core
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
build-type:    Simple

library
    exposed-modules:
        HsNix.Derivation
        HsNix.Internal.Derivation

    reexported-modules:
        HsNix.Hash,
        HsNix.System

    signatures:         HsNix.Derivation.Backend
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: Strict OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        hashable ^>=1.4.2,
        bytestring ^>=0.11,
        unordered-containers ^>=0.2,
        vector ^>=0.13,
        mtl ^>=2.2,
        nix-archive,
        hsnix-core:{core-types, derivation-types, storepath-sig}

library core-types
    exposed-modules:
        HsNix.Hash
        HsNix.Internal.OutputName
        HsNix.Internal.StorePathName
        HsNix.Internal.System
        HsNix.System

    visibility:         public
    hs-source-dirs:     core-types
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        hashable ^>=1.4.2,
        bytestring ^>=0.11,
        memory >=0.16 && <0.19,
        cryptonite >=0.29 && <0.31,
        template-haskell >=2.17 && <2.20

library storepath-sig
    signatures:
        HsNix.DrvStr
        HsNix.DrvStr.Builder
        HsNix.StorePath

    visibility:       public
    hs-source-dirs:   storepath-sig
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        hashable ^>=1.4.2

library derivation-types
    exposed-modules:    HsNix.Derivation.DerivationArgs
    visibility:         public
    hs-source-dirs:     derivation-types
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        hashable ^>=1.4.2,
        hsnix-core:core-types
