cabal-version:      3.4
name:               hsnix-drv
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         dariankline@outlook.com
author:             Jose Jane
build-type:         Simple
extra-source-files:
    tests/spec/files/dep-ca-ca.drv
    tests/spec/files/dep-ca-ca.json
    tests/spec/files/dep-ca-ia.drv
    tests/spec/files/dep-ca-ia.json
    tests/spec/files/dep-deferred-ia-ia.drv
    tests/spec/files/dep-deferred-ia-ia.json
    tests/spec/files/dep-fod-ca.drv
    tests/spec/files/dep-fod-ca.json
    tests/spec/files/dep-fod-fod.drv
    tests/spec/files/dep-fod-fod.json
    tests/spec/files/dep-fod-ia.drv
    tests/spec/files/dep-fod-ia.json
    tests/spec/files/dep-ia-ca.drv
    tests/spec/files/dep-ia-ca.json
    tests/spec/files/dep-ia-ia.drv
    tests/spec/files/dep-ia-ia.json
    tests/spec/files/dep-regular-ia-ca.drv
    tests/spec/files/dep-regular-ia-ca.json
    tests/spec/files/dep-src-ca.drv
    tests/spec/files/dep-src-ca.json
    tests/spec/files/dep-src-fod.drv
    tests/spec/files/dep-src-fod.json
    tests/spec/files/dep-src-ia.drv
    tests/spec/files/dep-src-ia.json
    tests/spec/files/multi-out-ca.drv
    tests/spec/files/multi-out-ca.json
    tests/spec/files/multi-out-ia.drv
    tests/spec/files/multi-out-ia.json
    tests/spec/files/simple-ca-rec.drv
    tests/spec/files/simple-ca-rec.json
    tests/spec/files/simple-ca.drv
    tests/spec/files/simple-ca.json
    tests/spec/files/simple-fod-rec.drv
    tests/spec/files/simple-fod-rec.json
    tests/spec/files/simple-fod1.drv
    tests/spec/files/simple-fod1.json
    tests/spec/files/simple-ia.drv
    tests/spec/files/simple-ia.json

library
    exposed-modules:
        HsNix.Derivation.Backend
        HsNix.DrvDirect.Instantiate
        HsNix.DrvDirect.Internal.Types

    reexported-modules:
        HsNix.DrvStr,
        HsNix.DrvStr.Builder,
        HsNix.StorePath

    hs-source-dirs:     src
    other-modules:      HsNix.DrvDirect.Internal.Hash
    default-language:   Haskell2010
    default-extensions: OverloadedStrings Strict
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        bytestring ^>=0.11,
        containers ^>=0.6.6,
        unordered-containers ^>=0.2,
        vector ^>=0.13,
        hashable ^>=1.4.2,
        memory >=0.16 && <0.19,
        binary ^>=0.8,
        cryptonite >=0.29 && <0.31,
        nix-derivation ^>=1.1,
        nix-archive,
        hnix-store-core ^>=0.6,
        hnix-store-remote ^>=0.6,
        hsnix-core:{core-types, derivation-types},
        hsnix-drv:storepath

library storepath
    exposed-modules:
        HsNix.DrvStr
        HsNix.DrvStr.Builder
        HsNix.StorePath

    hs-source-dirs:   storepath
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        hashable

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-tool-depends: hspec-discover:hspec-discover ^>=2
    hs-source-dirs:     tests/spec
    other-modules:
        Derivation.ContentAddressedSpec
        Derivation.DependSpec
        Derivation.FixedOutputSpec
        Derivation.InputAddressedSpec
        Derivation.MultiOutput
        Derivation.Test
        SrcInputSpec

    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings OverloadedRecordDot TypeApplications StrictData

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        text ^>=2.0,
        hspec >=2.8 && <2.11,
        aeson ^>=2.1,
        bytestring,
        containers,
        unordered-containers,
        filepath,
        cryptonite,
        nix-archive,
        hnix-store-core,
        hsnix-drv,
        hsnix-core:{core-types, derivation-types}

test-suite signature
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests/signature
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base,
        hsnix-drv,
        hsnix-core
