cabal-version:      3.4
name:               nix-archive
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         dariankline@outlook.com
author:             Jose Jane
build-type:         Simple
extra-source-files:
    tests/spec/files/executable_file.nar
    tests/spec/files/regular_file.nar
    tests/spec/files/simple_dir.nar
    tests/spec/files/sym_link.nar

library
    exposed-modules:    Nix.Nar
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        filepath ^>=1.4.100,
        bytestring ^>=0.11.2,
        containers ^>=0.6.6,
        binary ^>=0.8,
        directory ^>=1.3.8,
        unix ^>=2.8,
        hashable ^>=1.4.2,
        template-haskell

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests/spec
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.15 && <4.18,
        filepath ^>=1.4.100,
        bytestring ^>=0.11.2,
        containers ^>=0.6.6,
        binary ^>=0.8,
        hspec >=2.8 && <2.11,
        nix-archive
